--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "babelify": "^7.3.0",
     "browserify": "^13.1.0",
     "browserify-incremental": "^3.1.1",
+    "highlight.js": "^9.6.0",
     "j-toker": "0.0.10-beta3",
     "jquery": "^3.1.0",
+    "marked": "^0.3.6",
     "react": "^15.3.0",
     "react-dom": "^15.3.0",
     "react-redux": "^4.4.5",
