--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "jquery": "^3.1.0",
     "marked": "^0.3.6",
     "react": "^15.3.0",
+    "react-addons-css-transition-group": "^15.3.0",
     "react-dom": "^15.3.0",
     "react-redux": "^4.4.5",
     "react-router": "^2.6.1",
